Noelia : ajout superficie et classe standard en select dans biens

--- a/src/main/webapp/views/bl/bLListeVue.html
+++ b/src/main/webapp/views/bl/bLListeVue.html
@@ -12,7 +12,8 @@
 		<th>Caution locative</th>
 		<th>Loyer Mensuel</th>
 		<th>Charges mensuelles</th>
-		<th>Tye de bail</th>
+		<th>Type de bail</th>
+		<th>Superficie</th>
 		<th>Garniture</th>
 		<th>Rue</th>
 		<th>Code Postal</th>
@@ -32,6 +33,7 @@
 		<td>{{b.loyer}}</td>
 		<td>{{b.charges}}</td>
 		<td>{{b.typeBail}}</td>
+		<td>{{b.superficie}}</td>
 		<td>{{b.garniture}}</td>
 		<td>{{b.adresse.numRue}}, {{b.adresse.rue}}</td>
 		<td>{{b.adresse.cp}}</td> 
