--- a/src/main/webapp/views/bl/bLRechercheVue.html
+++ b/src/main/webapp/views/bl/bLRechercheVue.html
@@ -33,6 +33,7 @@
 			<th>Loyer Mensuel</th>
 			<th>Charges mensuelles</th>
 			<th>Tye de bail</th>
+			<th>Superficie</th>
 			<th>Garniture</th>
 			<th>Rue</th>
 			<th>Code Postal</th>
@@ -53,6 +54,7 @@
 			<td>{{bienlouer.loyer}}</td>
 			<td>{{bienlouer.charges}}</td>
 			<td>{{bienlouer.typeBail}}</td>
+			<td>{{bienlouer.superficie}}</td>
 			<td>{{bienlouer.garniture}}</td>
 			<td>{{bienlouer.adresse.numRue}}, {{bienlouer.adresse.rue}}</td>
 			<td>{{bienlouer.adresse.cp}}</td>
