--- a/src/main/webapp/views/bv/bVListeVue.html
+++ b/src/main/webapp/views/bv/bVListeVue.html
@@ -4,6 +4,7 @@
 		<th>R&eacutef&eacuterence</th>
 		<th>Type de Bien</th>
 		<th>Statut</th>
+		<th>Superficie</th>
 		<th>Revenu cadastral</th>
 		<th>Description</th>
 		<th>Date de soumission</th>
@@ -21,6 +22,7 @@
 		<td>{{bv.id}}</td>
 		<td>{{bv.typeBien}}</td>
 		<td>{{bv.statut}}</td>
+		<td>{{bv.superficie}}</td>
 		<td>{{bv.revenuCadastre}}</td>
 		<td>{{bv.description}}</td>
 		<td>{{bv.dateSoumission | date: "dd/MM/yyyy"}}</td>
