--- a/src/main/webapp/views/bv/bVRechercheVue.html
+++ b/src/main/webapp/views/bv/bVRechercheVue.html
@@ -21,6 +21,7 @@
 		<tr>
 			<th>Type de Bien</th>
 			<th>Statut</th>
+			<th>Superficie</th>
 			<th>Revenu cadastral</th>
 			<th>Description</th>
 			<th>Date de soumission</th>
@@ -37,6 +38,7 @@
 		<tr>
 			<td>{{bienvendre.typeBien}}</td>
 			<td>{{bienvendre.statut}}</td>
+			<td>{{bienvendre.superficie}}</td>
 			<td>{{bienvendre.revenuCadastre}}</td>
 			<td>{{bienvendre.description}}</td>
 			<td>{{bienvendre.dateSoumission | date: "dd/MM/yyyy"}}</td>
