--- a/src/main/webapp/views/bv/bVAjoutVue.html
+++ b/src/main/webapp/views/bv/bVAjoutVue.html
@@ -22,11 +22,11 @@
 				<select class="form-control" ng-model="bvForm.classeStandard.id">
 					<option value="">choisissez une classe</option>
 					<option value="1">Terrain pour construction</option>
-					<option value="2">Maison d'habitation de moins de 3chambres pour achat</option>
-					<option value="3">Maison d'habitation de plus de 3chambres pour location</option>
-					<option value="4">Studio sympa en location</option>
+					<option value="2">Maison de moins de 3 chambres pour achat</option>
+					<option value="3">Maison de plus de 3 chambres pour location</option>
+					<option value="4">Studio en location</option>
 					<option value="5">Entrepot industriel pour achat</option>
-					<option value="6">Appartement de 2chambres en location</option>
+					<option value="6">Appartement de 2 chambres en location</option>
 				</select>
 			</div>
 		</div>
