--- a/src/main/webapp/views/bl/bLAjoutVue.html
+++ b/src/main/webapp/views/bl/bLAjoutVue.html
@@ -8,15 +8,7 @@
 			<label for="cs" class="col-md-4 control-label">Classe
 				standard li&eacutee</label>
 			<div class="col-md-6">
-				<select class="form-control" ng-model="blForm.classeStandard.id">
-					<option value="">choisissez une classe</option>
-					<option value="1">Terrain pour construction</option>
-					<option value="2">Maison d'habitation de moins de 3chambres pour achat</option>
-					<option value="3">Maison d'habitation de plus de 3chambres pour location</option>
-					<option value="4">Studio sympa en location</option>
-					<option value="5">Entrepot industriel pour achat</option>
-					<option value="6">Appartement de 2chambres en location</option>
-				</select>
+				<input type="number" class="form-control" id="cs" ng-model="blForm.classeStandard.id">
 			</div>
 		</div>
 		<div class="form-group">
