thibault : accueil client plus changement d eportail plus image

--- a/src/main/webapp/views/pc/welcome.html
+++ b/src/main/webapp/views/pc/welcome.html
@@ -2,8 +2,8 @@
   <h1 class="display-4">Bienvenue chez Pachyderme-Immo</h1>
   <p class="lead">Pachyderme-Immo vous accueillent dans leurs agences partout en France !</p>
   <hr class="my-4">
-  <p>Avec Pachyderme-Immo, c'est aussi facile (mais compliqué) de trouver, vendre ou louer un bien immobilier que de tirer sur un éléphant dans un couloir</p>
+  <p>Avec Pachyderme-Immo, c'est aussi facile (mais compliqu&eacute) de trouver, vendre ou louer un bien immobilier que de tirer sur un &eacutel&eacutephant dans un couloir</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">qui sommes-nous ?</a>
+    <a class="btn btn-primary btn-lg" href="#!qui" role="button">qui sommes-nous ?</a>
   </p>
 </div>
