--- a/src/main/webapp/views/pc/qui.html
+++ b/src/main/webapp/views/pc/qui.html
@@ -1,3 +1,3 @@
 <div class="container">
-	<img src="assets/resources/image/.jpg">
+	<img src="assets/resources/image/nous.jpg" style="max-height: 700px; max-width: 900px">
 </div>
