tout le monde : c'est fini

--- a/src/main/webapp/views/pc/welcome.html
+++ b/src/main/webapp/views/pc/welcome.html
@@ -4,6 +4,6 @@
   <hr class="my-4">
   <p>Avec Pachyderme-Immo, c'est aussi facile (mais compliqu&eacute) de trouver, vendre ou louer un bien immobilier que de tirer sur un &eacutel&eacutephant dans un couloir</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#!qui" role="button">qui sommes-nous ?</a>
+    <a class="btn btn-success btn-lg" href="#!qui" role="button">qui sommes-nous ?</a>
   </p>
 </div>
